# Apr, 30 2003
- fixed bug: segfault if unable to bind to specified port
- fixed bug: segfault if unable to write users file at server exit
- changed file locking code to allow locking files without opening them
  in read-write mode. This also removes a race condition
- changed reply code to 550 if file not found (RETR)

# Apr, 29 2003
- fixed bug: server segfault if homedir does not exist
- patch to run on FreeBSD

#--- cvs commit TAG: rel-0-1rc4
# Apr, 25 2003
- do not send multiple 501 answers when STOR or RETR fails

# Apr, 24 2003
- specific error message when server can't go to user homedir at login
- possibility to hide files beginning by '.' ('hide_dotted_files')
- try to erase shm zone when server exits on error (only if created !)
- delete pid file if it exists

#--- cvs commit
# Apr, 21 2003
- site grpkill: kill all connected members from a group
- number of members connected at the same time can be limited for each group
- work on IPv6 compatibility
- crontab changed to accept classical crontab definition
  (min hour day month day_of_week)
- site grpren: rename group
- site grpdel removes all references to group, and send warnings if deletion
  creates users with no groups or changes user main group
- site wipe: delete file/dir recursively, without affecting user stats
- location pointer in file was shared by all clients connected to cache !
- fixed CRITICAL bug: context->datafd was closed without testing it, with a
  default value of 0 which IS a valid socket value !
- again, fixed problem when creating dir at the physical root of the server ...

#--- cvs commit
# Apr, 17 2003
- string analysis in cookie parser rewritten using a flex parser
  this has many benefits, allowing to use nested if/for statements, colors, etc.
- new flag FLAG_COLOR to enable colors in ftp answers (default: disabled)

# Apr, 14 2003
- user lose credits and stats when deleting files
- put permission files in cache (should speed up server a lot !)